# hmc-epg-project

./: .gitignore  README.md  pyproject.toml
cs/Data/Sharpshooter Data - HPR 2017/: parser.py
cs/GUI/: SCIDO.spec
cs/GUI/label_view/: DataWindow.py  Labeler.py
cs/GUI/live_view/: LiveViewTab.py
cs/GUI/live_view/device_panel/: BluetoothManager.py  DevicePanel.py  DeviceWidget.py
cs/GUI/models/: model_tracer.py  unet_probesplitter.py
cs/GUI/utils/: CommentMarker.py
engr/cs_code/: ConnectionIndicator.py  EPGSocket.py
engr/ui_python/: epg_control_ui.py
firmware/: CMakeLists.txt  README.md  nrf5340dk_nrf5340_cpuapp_ns.overlay  prj.conf
firmware/include/: adc.h  bluetooth.h  dds.h  gpio.h  signal_chain_amp.h  spi.h  uart.h
firmware/src/: adc.c  bluetooth.c  dds.c  gpio.c  main.c  signal_chain_amp.c  spi.c  uart.c
hardware/: README.md
machine-learning/: README.md  pyproject.toml
machine-learning/data/Sharpshooter Data - HPR 2017/: add_dummy_RVC.py
machine-learning/sharpshooter/: model_evaluation.py
software/: README.md  pyproject.toml
software/cs/gui/: LoadingScreen.py  MainWindow.py  build.py  epg_devices.json
software/cs/gui/device_view/: DeviceViewTab.py  DeviceViewWindow.py
software/cs/gui/device_view/device_panel/: AddDeviceWidget.py  DevicePanel.py
software/cs/gui/live_view/: LiveViewTab.py  SliderPanel.py
software/cs/gui/live_view/device_panel/: BluetoothManager.py  DeviceWidget.py
software/cs/gui/utils/: AboutDialog.py  PanZoomViewBox.py  SVGIcon.py  UploadFileDialog.py
software/engr/: 2025_UI.py  epg_control2.py
