[project]
name = "scido"
version = "0.2.0"
description = " SCIDO - Supervised Classification of Insect Data and Observations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleak>=1.1.0",
    "distinctipy>=1.3.4",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "positional-encodings>=6.0.4",
    "pyarrow>=21.0.0",
    "pyqt6>=6.9.1",
    "pyqtgraph>=0.13.7",
    "scikit-learn>=1.7.1",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "torch",
    "torchaudio",
    "torchvision",
    "tqdm>=4.67.1",
    "winrt-windows-devices-radios>=3.2.1",
]

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cu129/torch-2.8.0%2Bcu129-cp313-cp313-win_amd64.whl" }
torchaudio = { url = "https://download.pytorch.org/whl/cu129/torchaudio-2.8.0%2Bcu129-cp313-cp313-win_amd64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu129/torchvision-0.23.0%2Bcu129-cp313-cp313-win_amd64.whl" }
