[project]
name = "scido"
version = "0.2.0"
description = " SCIDO - Supervised Classification of Insect Data and Observations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleak>=1.1.0",
    "distinctipy>=1.3.4",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "positional-encodings>=6.0.4",
    "pyarrow>=21.0.0",
    "pyqt6>=6.9.1",
    "pyqtgraph>=0.13.7",
    "scikit-learn>=1.7.1",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "torch",
    "torchaudio",
    "torchvision",
    "tqdm>=4.67.1",

    "winrt-windows-devices-radios>=3.2.1 ; sys_platform == 'win32'",

    # ---- Default CPU PyTorch ----
    # Windows CPU
    "torch==2.8.0 ; sys_platform == 'win32' and extra != 'cuda129'",
    "torchvision==0.23.0 ; sys_platform == 'win32' and extra != 'cuda129'",
    "torchaudio==2.8.0 ; sys_platform == 'win32' and extra != 'cuda129'",

    # Linux CPU (any arch)
    "torch==2.8.0 ; sys_platform == 'linux' and extra != 'cuda129'",
    "torchvision==0.23.0 ; sys_platform == 'linux' and extra != 'cuda129'",
    "torchaudio==2.8.0 ; sys_platform == 'linux' and extra != 'cuda129'",

    # macOS CPU (Apple Silicon & Intel)
    "torch==2.8.0 ; sys_platform == 'darwin' and extra != 'cuda129'",
    "torchvision==0.23.0 ; sys_platform == 'darwin' and extra != 'cuda129'",
    "torchaudio==2.8.0 ; sys_platform == 'darwin' and extra != 'cuda129'",
]

[project.optional-dependencies]
# Opt-in CUDA 12.9 wheels
cuda129 = [
    # Windows CUDA 12.9
    "torch @ https://download.pytorch.org/whl/cu129/torch-2.8.0%2Bcu129-cp313-cp313-win_amd64.whl ; sys_platform == 'win32' and extra == 'cuda129'",
    "torchvision @ https://download.pytorch.org/whl/cu129/torchvision-0.23.0%2Bcu129-cp313-cp313-win_amd64.whl ; sys_platform == 'win32' and extra == 'cuda129'",
    "torchaudio @ https://download.pytorch.org/whl/cu129/torchaudio-2.8.0%2Bcu129-cp313-cp313-win_amd64.whl ; sys_platform == 'win32' and extra == 'cuda129'",

    # Linux x86_64 CUDA 12.9
    "torch @ https://download.pytorch.org/whl/cu129/torch-2.8.0%2Bcu129-cp313-cp313-manylinux_2_28_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64' and extra == 'cuda129'",
    "torchvision @ https://download.pytorch.org/whl/cu129/torchvision-0.23.0%2Bcu129-cp313-cp313-manylinux_2_28_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64' and extra == 'cuda129'",
    "torchaudio @ https://download.pytorch.org/whl/cu129/torchaudio-2.8.0%2Bcu129-cp313-cp313-manylinux_2_28_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64' and extra == 'cuda129'",
]